lab1/Test/L1-A-13-50.output
Error Type B at Line 4
Error Type B at Line 13
Error Type B at Line 20
Error Type B at Line 23
Error Type B at Line 31
Error Type A at Line 37
Error Type B at Line 38
